workspace = { members = ["example"] }
[package]
name = "retro_ab_gamepad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gilrs = "0.10.8"
lazy_static = "1.5.0"
retro_ab = { git = "https://github.com/Xsimple1010/retro_ab_rs.git" }

[dev-dependencies]
retro_ab_av = { git = "https://github.com/Xsimple1010/retro_ab_av.git" }

[[example]]
name = "example"
path = "example/src/main.rs"
