[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
retro_ab_av = { git = "https://github.com/Xsimple1010/retro_ab_av.git" }
retro_ab = { git = "https://github.com/Xsimple1010/retro_ab_rs.git" }
retro_ab_gamepad = { path = "../" }
